@@ -1,4 +1,5 @@
 4.0
+	+ When removing user delete its sogo database rows
 	+ Make sure no repeated preconditons are shown
 	+ OpenChange users can have mail accounts on different virtual domains
 	+ Add conf file for openchange module, containing broker config for
